[tool.poetry]
name = "Cpp_programs"
version = "1.0.0"
description = "A repository that contains some cpp programs I wrote"
authors = ["KortaPo"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
questionary = "^1.10.0"
loguru = "^0.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
